--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
     <p style="font-size:30px"> Welcome to the home page of Risk But Better!
+      <p> Enjoy!
+    </p>
   </head>
 </html>
