--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
     <p style="font-size:30px"> Welcome to the home page of Risk But Better!
-      <p> Enjoy!
-    </p>
+      <body>
+        Hope you enjoy!
+      </body>
   </head>
 </html>
