--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
     <p style="font-size:30px"> Welcome to the home page of Risk But Better!
       <body>
         Hope you enjoy!
+        <br>
+        <br>
+        Here are the rules to the game:
+        <ul>
+          Open the board
+          Each player picks a color
+          Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers
+        </ul>
       </body>
   </head>
 </html>
