--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <br>
         Here are the rules to the game:
         <ul>
-          Open the board
-          Each player picks a color
-          Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers
+          <li>Open the board</li>
+          <li>Each player picks a color</li>
+          ?li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
         </ul>
       </body>
   </head>
