--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ul>
           <li>Open the board</li>
           <li>Each player picks a color</li>
-          ?li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
+          <li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
         </ul>
       </body>
   </head>
