commit on 'main'

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           <li>Open the board</li>
           <li>Each player picks a color</li>
           <li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
+          <li>Hello this is a push attempt by Ayush</li>
         </ul>
       </body>
   </head>
