--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 
 <head>
     <p style="font-size:30px"> Welcome to the home page of Risk But Better!
-    <body>
+
+        <body>
             Hope you enjoy!
             <br>
             <br> Here are the rules to the game:
             <ul>
                 <li>Open the board</li>
-                <li>Each player picks a color</li>
-                <li>Soldiers represent 1 soldier, horses represent 5 iers, and cannons represent 10 soldiers</li>
-    </body>
+                <li>Each player picks a colo
+                    <li>Soldiers represent 1 soldier, horses represent 5 iers, and cannons represent 10 soldiers</li>
+        </body>
 </head>
 
 </html>
