--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
                 <li>Open the board</li>
                 <li>Each player picks a colo
                     <li>Soldiers represent 1 soldier, horses represent 5 iers, and cannons represent 10 soldiers</li>
+                    <li>Risk but better</li>
         </body>
 </head>
 
