--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <li>Open the board</li>
                 <li>Each player picks a colo
                 <li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
-                <li>Risk but better</li>
+                <li>The computer randomly selects the first player</li>
         </body>
 </head>
 
