--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
                 <li>Each player picks a colo
                     <li>Soldiers represent 1 soldier, horses represent 5 iers, and cannons represent 10 soldiers</li>
                     <li>Risk but better</li>
+                    <li>This is a test!</li>
         </body>
 </head>
 
