Added a graphics file (javascript) and embedded it in the html file

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
                 <li>The computer randomly selects the first player</li>
         </body>
+        <script src="graphics.js"></script>
 </head>
 
 </html>
