--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
             <br>
             <br> Here are the rules to the game:
             <ul>
-                <li>Open the board</li>
-                <li>Each player picks a colo
-                    <li>Soldiers represent 1 soldier, horses represent 5 iers, and cannons represent 10 soldiers</li>
-                    <li>Risk but better</li>
-                    <li>This is a test!</li>
+                <li>Each player picks a color</li>
+                <li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
+                <li>The computer randomly picks a player to start the game</li>
+            <script src="graphics.js"></script>    
         </body>
-        <script src="graphics.js"></script>
 </head>
 
 </html>
