--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li>The computer randomly picks a player to start the game</li>
             <script src="graphics.js"></script>
 
-            <img src="https://ctl.s6img.com/society6/img/My2tMqyfsMfpimmSZwa-3nACPZI/w_700/prints/~artwork/s6-original-art-uploads/society6/uploads/misc/764c1065375343aaa52972115eb3c53e/~~/chess-board807255-prints.jpg?wait=0&attempt=0"></img>
+            <!<img src="https://ctl.s6img.com/society6/img/My2tMqyfsMfpimmSZwa-3nACPZI/w_700/prints/~artwork/s6-original-art-uploads/society6/uploads/misc/764c1065375343aaa52972115eb3c53e/~~/chess-board807255-prints.jpg?wait=0&attempt=0"></img>>
         </body>
 </head>
 
