--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <p style="font-size:30px"> Welcome to the home page of Risk But Better!
 
         <body>
+            <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+            <script src="graphics.js"></script>
             Hope you enjoy!
             <br>
             <br> Here are the rules to the game:
@@ -11,9 +13,6 @@
                 <li>Each player picks a color</li>
                 <li>Soldiers represent 1 soldier, horses represent 5 soldiers, and cannons represent 10 soldiers</li>
                 <li>The computer randomly picks a player to start the game</li>
-            <script src="graphics.js"></script>
-
-            <!<img src="https://ctl.s6img.com/society6/img/My2tMqyfsMfpimmSZwa-3nACPZI/w_700/prints/~artwork/s6-original-art-uploads/society6/uploads/misc/764c1065375343aaa52972115eb3c53e/~~/chess-board807255-prints.jpg?wait=0&attempt=0"></img>>
         </body>
 </head>
 
